1. FIX: Toolbar wrap issue 2. Import the css files to new customstyle.css and bundle it. 3. Modified the README file.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@modusoperandi/licit-customstyles",
+  "name": "@modusoperandi/licit-custom-styles",
   "version": "0.1.0",
   "subversion": "1",
   "description": "CustomStyle plugin built with ProseMirror",
@@ -15,7 +15,7 @@
     "webpack": "webpack",
     "build:babel": "babel src --out-dir dist",
     "build:flow": "flow-copy-source -v -i '**/__tests__/**' src dist",
-    "build:css": "cp src/ui/*.css dist/ui",
+    "build:css": "cp src/ui/*.css dist/ui && cp src/*.css dist",
     "build:dist": "npm run build:clean && npm run webpack && npm run build:babel && npm run build:css && npm run build:flow",
     "flow": "flow --show-all-errors",
     "lint:js": "eslint \"src/**/*.js\"",
