--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   },
   "dependencies": {
     "@modusoperandi/licit-doc-attrs-step": "^0.1.1",
-    "@modusoperandi/licit-ui-commands": "file:modusoperandi-licit-ui-commands-0.0.1.tgz",
+	"@modusoperandi/licit-ui-commands": "git+https://github.com/MO-Movia/licit-ui-components.git",    
     "classnames": "^2.3.1",
     "color": "3.1.2",
     "cors": "^2.8.5",
@@ -93,7 +93,7 @@
     "prosemirror-model": "^1.13.1",
     "prosemirror-state": "^1.3.4",
     "prosemirror-transform": "^1.2.9",
-    "prosemirror-utils": "0.9.6",
+    "prosemirror-utils": "file:prosemirror-utils-1.0.0-0.tgz",
     "prosemirror-view": "^1.17.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
