--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modusoperandi/licit-custom-styles",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "subversion": "1",
   "description": "CustomStyle plugin built with ProseMirror",
   "main": "dist/index.js",
@@ -10,7 +10,8 @@
     "url": "git+https://github.com/MO-Movia/licit.git"
   },
   "bundleDependencies": [
-    "prosemirror-utils"
+    "prosemirror-utils",
+    "@modusoperandi/licit-ui-commands"
   ],
   "scripts": {
     "test": "jest --passWithNoTests",
