--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "url": "git+https://github.com/MO-Movia/licit.git"
   },
   "bundleDependencies": [
-    "prosemirror-utils",
-    "@modusoperandi/licit-ui-commands"
+    "prosemirror-utils"
   ],
   "scripts": {
     "test": "jest --passWithNoTests",
@@ -80,7 +79,7 @@
   },
   "dependencies": {
     "@modusoperandi/licit-doc-attrs-step": "^0.1.1",
-    "@modusoperandi/licit-ui-commands": "file:modusoperandi-licit-ui-commands-0.0.1.tgz",
+    "@modusoperandi/licit-ui-commands": "git+https://github.com/MO-Movia/licit-ui-components.git#prosemirror-model-upgrade",
     "classnames": "^2.3.1",
     "color": "3.1.2",
     "cors": "^2.8.5",
@@ -94,7 +93,7 @@
     "mv": "^2.1.1",
     "node-mathquill": "0.10.2",
     "nullthrows": "1.1.1",
-    "prosemirror-model": "^1.13.1",
+    "prosemirror-model": "^1.16.1",
     "prosemirror-state": "^1.3.4",
     "prosemirror-transform": "^1.2.9",
     "prosemirror-utils": "file:prosemirror-utils-1.0.0-0.tgz",
