--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         fetch-depth: 2
-    - run: npm ci --no-optional 
+    - run: npm ci --legacy-peer-deps --omit=optional --no-shrinkwrap 
     - run: npm run build:dist
     - run: npm run test
 
