--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "type": "git",
     "url": "git+https://github.com/MO-Movia/licit.git"
   },
-  "bundleDependencies": [
-    "prosemirror-utils"
-  ],
   "scripts": {
     "test": "jest --passWithNoTests",
     "build:clean": "rm -rf dist/ && rm -f modusoperandi-licit-customstyles-*.*.*.tgz",
@@ -96,7 +93,7 @@
     "prosemirror-model": "^1.16.1",
     "prosemirror-state": "^1.3.4",
     "prosemirror-transform": "^1.2.9",
-    "prosemirror-utils": "file:prosemirror-utils-1.0.0-0.tgz",
+    "prosemirror-utils": "^1.0.0-0",
     "prosemirror-view": "^1.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
