--- a/package.json
+++ b/package.json
@@ -73,10 +73,13 @@
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2",
     "write-file-webpack-plugin": "^4.5.1"
+  },  
+  "peerDependencies": {
+    "uuid": "9.0.0"
   },
   "dependencies": {
-    "@modusoperandi/licit-doc-attrs-step": "^0.1.4",
-    "@modusoperandi/licit-ui-commands": "^0.1.11",
+    "@modusoperandi/licit-doc-attrs-step": "^0.1.5",
+    "@modusoperandi/licit-ui-commands": "^0.1.13",
     "classnames": "^2.3.1",
     "color": "3.1.2",
     "cors": "^2.8.5",
@@ -95,7 +98,6 @@
     "smooth-scroll-into-view-if-needed": "1.1.28",
     "stable": "0.1.8",
     "style-loader": "^2.0.0",
-    "uuid": "8.2.0",
     "webfontloader": "1.6.28"
   },
   "importSort": {
