--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modusoperandi/licit-custom-styles",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "subversion": "1",
   "description": "CustomStyle plugin built with ProseMirror",
   "main": "dist/index.js",
@@ -48,9 +48,15 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-flow": "^7.10.4",
     "@babel/preset-react": "^7.16.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.11.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "@cyclonedx/cyclonedx-npm": "^1.11.0",
     "babel-eslint": "10.1.0",
-    "babel-jest": "^27.0.2",
+    "babel-jest": "^29.2.0",
     "babel-loader": "8.1.0",
     "babel-plugin-flow-react-proptypes": "26.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
@@ -68,8 +74,8 @@
     "flow-webpack-plugin": "1.2.0",
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.2.5",
-    "jest-prosemirror": "^0.8.3",
+    "jest": "^29.2.0",
+    "jest-prosemirror": "^1.0.10",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
@@ -86,19 +92,24 @@
   "dependencies": {
     "@modusoperandi/licit-doc-attrs-step": "^0.1.5",
     "@modusoperandi/licit-ui-commands": "^0.1.16",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "classnames": "^2.3.1",
     "color": "3.1.2",
     "cors": "^2.8.5",
+    "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "flatted": "^3.1.0",
     "flow-typed": "^3.3.1",
     "formidable": "^1.2.2",
     "invariant": "2.2.4",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-junit": "^14.0.1",
     "jquery": "^3.5.1",
     "katex": "0.11.1",
     "mv": "^2.1.1",
     "node-mathquill": "0.10.2",
     "nullthrows": "1.1.1",
+    "prosemirror-example-setup": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "smooth-scroll-into-view-if-needed": "1.1.28",
@@ -126,32 +137,6 @@
     ],
     "*.json": [
       "prettier --write"
-    ]
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "jest-prosemirror/environment"
-    ],
-    "testEnvironment": "jsdom",
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "*.js"
-    ],
-    "verbose": true,
-    "testTimeout": 30000,
-    "rootDir": "src",
-    "testRegex": "((\\.|/*.)(test))\\.js?$",
-    "moduleFileExtensions": [
-      "js"
-    ],
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest"
-    },
-    "moduleNameMapper": {
-      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
-    },
-    "setupFiles": [
-      "../jest.setup.js"
     ]
   }
 }
