--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/plugin-transform-parameters": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/plugin-proposal-json-strings": "^7.18.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.15.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.15.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.15.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-flow": "^7.10.4",
     "@babel/preset-react": "^7.16.0",
@@ -83,38 +87,38 @@
     "stylelint-prettier": "^1.2.0",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2",
-    "write-file-webpack-plugin": "^4.5.1"
+    "write-file-webpack-plugin": "^4.5.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-junit": "^14.0.1",
+    "style-loader": "^2.0.0",
+    "webfontloader": "1.6.28",
+    "enzyme": "^3.11.0"
   },
   "peerDependencies": {
     "uuid": "9.0.0"
   },
   "dependencies": {
-    "@modusoperandi/licit-doc-attrs-step": "^0.1.5",
-    "@modusoperandi/licit-ui-commands": "^0.1.16",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
+    "@modusoperandi/licit-doc-attrs-step": "^0.1.6",
+    "@modusoperandi/licit-ui-commands": "^0.1.18",
     "classnames": "^2.3.1",
     "color": "3.1.2",
     "cors": "^2.8.5",
-    "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "flatted": "^3.1.0",
     "flow-typed": "^3.3.1",
     "formidable": "^1.2.2",
     "invariant": "2.2.4",
-    "jest-environment-jsdom": "^29.5.0",
-    "jest-junit": "^14.0.1",
     "jquery": "^3.5.1",
     "katex": "0.11.1",
     "mv": "^2.1.1",
     "node-mathquill": "0.10.2",
     "nullthrows": "1.1.1",
-    "prosemirror-example-setup": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "smooth-scroll-into-view-if-needed": "1.1.28",
-    "stable": "0.1.8",
-    "style-loader": "^2.0.0",
-    "webfontloader": "1.6.28"
+    "stable": "0.1.8"
+ 
   },
   "importSort": {
     ".js": {
