--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.2.0",
-    "jest-prosemirror": "^1.0.10",
+    "jest-prosemirror": "1.0.31",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
