--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modusoperandi/licit-custom-styles",
-  "version": "0.1.26",
+  "version": "0.1.23",
   "subversion": "1",
   "description": "CustomStyle plugin built with ProseMirror",
   "main": "dist/index.js",
@@ -10,9 +10,7 @@
     "url": "git+https://github.com/MO-Movia/licit.git"
   },
   "scripts": {
-    "test": "jest",
-    "test:unit": "jest --passWithNoTests",
-    "test:coverage": "jest --coverage --passWithNoTests",
+    "test": "jest --passWithNoTests",
     "build:clean": "rm -rf dist/ && rm -f modusoperandi-licit-customstyles-*.*.*.tgz",
     "webpack": "webpack",
     "build:babel": "babel src --out-dir dist",
@@ -22,9 +20,6 @@
     "flow": "flow --show-all-errors",
     "lint:js": "eslint \"src/**/*.js\"",
     "lint:css": "stylelint \"**/*.css\"",
-    "lint": "npm run lint:css & npm run lint:js",
-    "ci:build": "npm run build:clean && npm run webpack && npm run build:babel && npm run build:css && npm run build:flow",
-    "ci:bom": "cyclonedx-npm --ignore-npm-errors --short-PURLs --output-format XML --output-file dist/bom.xml",
     "prepare": "npm run build:dist"
   },
   "devDependencies": {
@@ -40,30 +35,16 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
     "@babel/plugin-proposal-throw-expressions": "^7.10.4",
-    "@babel/plugin-proposal-json-strings": "^7.18.6",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.15.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.15.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.15.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/plugin-transform-parameters": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/plugin-proposal-json-strings": "^7.18.6",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.15.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.15.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.15.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-flow": "^7.10.4",
     "@babel/preset-react": "^7.16.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@types/jest": "^29.1.2",
-    "@types/node": "^18.11.0",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@cyclonedx/cyclonedx-npm": "^1.11.0",
     "babel-eslint": "10.1.0",
-    "babel-jest": "^29.2.0",
+    "babel-jest": "^29.3.1",
     "babel-loader": "8.1.0",
     "babel-plugin-flow-react-proptypes": "26.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
@@ -72,7 +53,7 @@
     "css-loader": "^5.2.6",
     "eslint": "7.8.1",
     "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "7.27.0",
     "file-loader": "^6.2.0",
@@ -81,7 +62,9 @@
     "flow-webpack-plugin": "1.2.0",
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.2.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-junit": "^14.0.1",
     "jest-prosemirror": "^1.0.10",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^10.4.0",
@@ -89,22 +72,18 @@
     "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.2.0",
+    "ts-jest": "^29.0.7",
+    "ts-node": "^10.4.0",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2",
-    "write-file-webpack-plugin": "^4.5.1",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "jest-junit": "^14.0.1",
-    "style-loader": "^2.0.0",
-    "webfontloader": "1.6.28",
-    "enzyme": "^3.11.0"
+    "write-file-webpack-plugin": "^4.5.1"
   },
   "peerDependencies": {
     "uuid": "9.0.0"
   },
   "dependencies": {
     "@modusoperandi/licit-doc-attrs-step": "^0.1.5",
-    "@modusoperandi/licit-ui-commands": "^0.1.17",
+    "@modusoperandi/licit-ui-commands": "^0.1.16",
     "classnames": "^2.3.1",
     "color": "3.1.2",
     "cors": "^2.8.5",
@@ -113,6 +92,7 @@
     "flow-typed": "^3.3.1",
     "formidable": "^1.2.2",
     "invariant": "2.2.4",
+    "jquery": "^3.5.1",
     "katex": "0.11.1",
     "mv": "^2.1.1",
     "node-mathquill": "0.10.2",
@@ -120,10 +100,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "smooth-scroll-into-view-if-needed": "1.1.28",
-    "stable": "0.1.8"
-  },
-  "overrides": {
-    "semver": "^7.5.2"
+    "stable": "0.1.8",
+    "style-loader": "^2.0.0",
+    "webfontloader": "1.6.28"
   },
   "importSort": {
     ".js": {
@@ -146,5 +125,5 @@
     "*.json": [
       "prettier --write"
     ]
-  }
+  }  
 }
