--- a/.babelrc
+++ b/.babelrc
@@ -1,22 +1,9 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "node": true
-        }
-      }
-    ],
-    "@babel/preset-react",
-    "@babel/preset-flow"
-  ],
   "plugins": [
+    ["@babel/plugin-transform-typescript", { "allowDeclareFields": true }],
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-export-default-from",
-    "flow-react-proptypes",
     "transform-react-remove-prop-types",
-    "@babel/plugin-transform-flow-strip-types",
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-transform-parameters",
     [
@@ -50,5 +37,15 @@
     ],
     "@babel/plugin-proposal-nullish-coalescing-operator",
     "@babel/plugin-proposal-do-expressions"
+  ],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+         "modules": false
+      }
+    ],
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ]
 }
