--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,16 @@
 {
   "compilerOptions": {
-    "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "target": "ES2022",
     "module": "esnext",
     "moduleResolution": "node",
-    "lib": [
-      "es2017",
-      "dom",
-      "dom.Iterable"
-    ],
+    "allowSyntheticDefaultImports": true,
+    "lib": ["es2018", "dom", "dom.Iterable"],
     "outDir": "dist",
     "pretty": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": [
-      "jest",
-      "jest-prosemirror"
-    ],
+    "types": ["jest", "node", "jest-prosemirror"],
     // Ensure that .d.ts files are created by tsc, but not .js files
     "declaration": true,
     "emitDeclarationOnly": true,
@@ -27,11 +20,6 @@
   "typeAcquisition": {
     "enable": true
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*.test.ts"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules"]
 }
