--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@modusoperandi/licit-custom-styles",
   "version": "0.1.23",
+  "type": "module",
   "subversion": "1",
   "description": "CustomStyle plugin built with ProseMirror",
   "main": "dist/index.js",
@@ -10,7 +11,9 @@
     "url": "git+https://github.com/MO-Movia/licit.git"
   },
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "test": "jest",
+    "test:unit": "jest",
+    "test:coverage": "jest --coverage",
     "build:clean": "rm -rf dist/ && rm -f modusoperandi-licit-customstyles-*.*.*.tgz",
     "webpack": "webpack",
     "build:babel": "babel src --out-dir dist",
@@ -20,6 +23,9 @@
     "flow": "flow --show-all-errors",
     "lint:js": "eslint \"src/**/*.js\"",
     "lint:css": "stylelint \"**/*.css\"",
+    "lint": "npm run lint:css & npm run lint:js",
+    "ci:build": "npm run build:clean && npm run webpack && npm run build:babel && npm run build:css && npm run build:flow",
+    "ci:bom": "cyclonedx-npm --ignore-npm-errors --short-PURLs --output-format XML --output-file dist/bom.xml",
     "prepare": "npm run build:dist"
   },
   "devDependencies": {
@@ -31,8 +37,12 @@
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
     "@babel/plugin-proposal-function-sent": "^7.10.4",
+    "@babel/plugin-proposal-json-strings": "^7.18.6",
     "@babel/plugin-proposal-logical-assignment-operators": "^7.11.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.15.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.15.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.15.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
     "@babel/plugin-proposal-throw-expressions": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -43,6 +53,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-flow": "^7.10.4",
     "@babel/preset-react": "^7.16.0",
+    "@cyclonedx/cyclonedx-npm": "^1.11.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^29.3.1",
     "babel-loader": "8.1.0",
@@ -73,6 +84,7 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.2.0",
     "ts-jest": "^29.0.7",
+    "ts-loader": "^9.5.0",
     "ts-node": "^10.4.0",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2",
@@ -82,8 +94,8 @@
     "uuid": "9.0.0"
   },
   "dependencies": {
-    "@modusoperandi/licit-doc-attrs-step": "^0.1.5",
-    "@modusoperandi/licit-ui-commands": "^0.1.16",
+    "@modusoperandi/licit-doc-attrs-step": "file:modusoperandi-licit-doc-attrs-step-0.1.6.tgz",
+    "@modusoperandi/licit-ui-commands": "file:modusoperandi-licit-ui-commands-0.1.18.tgz",
     "classnames": "^2.3.1",
     "color": "3.1.2",
     "cors": "^2.8.5",
@@ -125,5 +137,32 @@
     "*.json": [
       "prettier --write"
     ]
-  }  
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "jest-prosemirror/environment"
+    ],
+    "testEnvironment": "jsdom",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "*.js"
+    ],
+    "verbose": true,
+    "testTimeout": 30000,
+    "rootDir": "src",
+    "testRegex": "((\\.|/*.)(test))\\.js?$",
+    "moduleFileExtensions": [
+      "js"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy",
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    },
+    "setupFiles": [
+      "../jest.setup.js"
+    ]
+  }
 }
