--- a/.babelrc
+++ b/.babelrc
@@ -10,10 +10,11 @@
     "@babel/preset-flow"
   ],
   "plugins": [
-    ["@babel/plugin-transform-typescript", { "allowDeclareFields": true }],
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-export-default-from",
+    "flow-react-proptypes",
     "transform-react-remove-prop-types",
+    "@babel/plugin-transform-flow-strip-types",
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-transform-parameters",
     [
@@ -47,15 +48,5 @@
     ],
     "@babel/plugin-proposal-nullish-coalescing-operator",
     "@babel/plugin-proposal-do-expressions"
-  ],
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-         "modules": false
-      }
-    ],
-    "@babel/preset-react",
-    "@babel/preset-typescript"
   ]
 }
