--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modusoperandi/licit-custom-styles",
-  "version": "0.1.23",
+  "version": "0.1.26",
   "type": "module",
   "subversion": "1",
   "description": "CustomStyle plugin built with ProseMirror",
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
+    "@babel/eslint-parser": "^7.15.0",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/plugin-proposal-do-expressions": "^7.10.4",
@@ -50,20 +51,24 @@
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/plugin-transform-parameters": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/plugin-transform-typescript": "^7.22.15",
+    "@babel/plugin-proposal-json-strings": "^7.18.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.15.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.15.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.15.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-flow": "^7.10.4",
     "@babel/preset-react": "^7.16.0",
-    "@cyclonedx/cyclonedx-npm": "^1.11.0",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "^29.3.1",
-    "babel-loader": "8.1.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.2.0",
+    "babel-loader": "8.2.5",
     "babel-plugin-flow-react-proptypes": "26.0.0",
-    "babel-plugin-transform-optional-chaining": "^7.0.0-beta.3",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
-    "enzyme": "^3.11.0",
     "eslint": "7.8.1",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jest": "^24.4.0",
@@ -88,7 +93,6 @@
     "ts-jest": "^29.0.7",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.3.5",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2",
     "write-file-webpack-plugin": "^4.5.1"
@@ -97,8 +101,8 @@
     "uuid": "9.0.0"
   },
   "dependencies": {
-    "@modusoperandi/licit-doc-attrs-step": "file:modusoperandi-licit-doc-attrs-step-0.1.6.tgz",
-    "@modusoperandi/licit-ui-commands": "file:modusoperandi-licit-ui-commands-0.1.18.tgz",
+    "@modusoperandi/licit-doc-attrs-step": "modusoperandi-licit-doc-attrs-step-0.1.6.tgz",
+    "@modusoperandi/licit-ui-commands": "modusoperandi-licit-ui-commands-0.1.18.tgz",
     "classnames": "^2.3.1",
     "color": "3.1.2",
     "cors": "^2.8.5",
@@ -112,8 +116,8 @@
     "mv": "^2.1.1",
     "node-mathquill": "0.10.2",
     "nullthrows": "1.1.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "smooth-scroll-into-view-if-needed": "1.1.28",
     "stable": "0.1.8",
     "style-loader": "^2.0.0",
@@ -139,33 +143,6 @@
     ],
     "*.json": [
       "prettier --write"
-    ]
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "jest-prosemirror/environment"
-    ],
-    "testEnvironment": "jsdom",
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "*.js"
-    ],
-    "verbose": true,
-    "testTimeout": 30000,
-    "rootDir": "src",
-    "testRegex": "((\\.|/*.)(test))\\.js?$",
-    "moduleFileExtensions": [
-      "js"
-    ],
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest"
-    },
-    "moduleNameMapper": {
-      "\\.(css|less|scss|sass)$": "identity-obj-proxy",
-      "^(\\.{1,2}/.*)\\.js$": "$1"
-    },
-    "setupFiles": [
-      "../jest.setup.js"
     ]
   }
 }
