--- a/package.json
+++ b/package.json
@@ -95,8 +95,8 @@
     "write-file-webpack-plugin": "^4.5.1"
   },
   "peerDependencies": {
-    "@modusoperandi/licit-doc-attrs-step": "^0.1.6",
-    "@modusoperandi/licit-ui-commands": "^0.1.18",
+    "@modusoperandi/licit-doc-attrs-step": "1.0.0",
+    "@modusoperandi/licit-ui-commands": "1.0.0",
     "uuid": "9.0.0"
   },
   "dependencies": {
