--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@modusoperandi/licit-custom-styles",
-  "version": "0.1.26",
+  "version": "1.0.0",
   "type": "module",
   "subversion": "1",
   "description": "CustomStyle plugin built with ProseMirror",
-  "main": "dist/index.js",
-  "style": "dist/styles.css",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "style": "styles.css",
+  "types": "index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MO-Movia/licit.git"
@@ -25,9 +25,8 @@
     "lint:js": "eslint \"src/**/*.js\"",
     "lint:css": "stylelint \"**/*.css\"",
     "lint": "npm run lint:css & npm run lint:js",
-    "ci:build": "npm run build:clean && npm run webpack && npm run build:babel && npm run build:css && npm run build:flow && cp src/*.d.ts dist/ ",
-    "ci:bom": "cyclonedx-npm --ignore-npm-errors --short-PURLs --output-format XML --output-file dist/bom.xml",
-    "prepare": "npm run build:dist"
+    "ci:build": "npm run build:clean && npm run webpack && npm run build:babel && npm run build:css && npm run build:flow && copyfiles --up 1 \"src/**/*.d.ts\" dist/ && copyfiles --up 1 \"src/**/*.css\" dist && copyfiles package.json dist",
+    "ci:bom": "cyclonedx-npm --ignore-npm-errors --short-PURLs --output-format XML --output-file dist/bom.xml"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -60,21 +59,22 @@
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.2.0",
-    "babel-loader": "8.2.5",
-    "babel-plugin-flow-react-proptypes": "26.0.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-flow-react-proptypes": "^26.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
-    "eslint": "7.8.1",
+    "copyfiles": "^2.4.1",
+    "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "7.27.0",
+    "eslint-plugin-react": "^7.27.0",
     "file-loader": "^6.2.0",
-    "flow-bin": "0.128.0",
-    "flow-copy-source": "2.0.9",
-    "flow-webpack-plugin": "1.2.0",
+    "flow-bin": "^0.128.0",
+    "flow-copy-source": "^2.0.9",
+    "flow-webpack-plugin": "^1.2.0",
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
@@ -83,10 +83,10 @@
     "jest-prosemirror": "^2.0.0",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^10.4.0",
-    "prettier": "^2.1.2",
-    "stylelint": "^13.7.2",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-prettier": "^1.2.0",
+    "prettier": "^3.0.0",
+    "stylelint": "^16.0.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-prettier": "^5.0.0",
     "ts-jest": "^29.0.7",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.4.0",
@@ -95,30 +95,30 @@
     "write-file-webpack-plugin": "^4.5.1"
   },
   "peerDependencies": {
-    "@modusoperandi/licit-doc-attrs-step": "1.0.0",
-    "@modusoperandi/licit-ui-commands": "1.0.0",
-    "uuid": "9.0.0"
+    "@modusoperandi/licit-doc-attrs-step": "^1.0.0",
+    "@modusoperandi/licit-ui-commands": "^1.0.0",
+    "uuid": "^9.0.0"
   },
   "dependencies": {
     "classnames": "^2.3.1",
-    "color": "3.1.2",
+    "color": "^3.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "flatted": "^3.1.0",
     "flow-typed": "^3.3.1",
     "formidable": "^1.2.2",
-    "invariant": "2.2.4",
+    "invariant": "^2.2.4",
     "jquery": "^3.5.1",
-    "katex": "0.11.1",
+    "katex": "^0.11.1",
     "mv": "^2.1.1",
-    "node-mathquill": "0.10.2",
-    "nullthrows": "1.1.1",
+    "node-mathquill": "^0.10.2",
+    "nullthrows": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "smooth-scroll-into-view-if-needed": "1.1.28",
-    "stable": "0.1.8",
+    "smooth-scroll-into-view-if-needed": "^1.1.28",
+    "stable": "^0.1.8",
     "style-loader": "^2.0.0",
-    "webfontloader": "1.6.28"
+    "webfontloader": "^1.6.28"
   },
   "importSort": {
     ".js": {
