--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "uuid": "^9.0.0"
   },
   "dependencies": {
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "classnames": "^2.3.1",
     "color": "^3.1.2",
     "cors": "^2.8.5",
