--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modusoperandi/licit-custom-styles",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "type": "module",
   "subversion": "1",
   "description": "CustomStyle plugin built with ProseMirror",
@@ -66,7 +66,8 @@
     "ts-node": "^10.4.0"
   },
   "overrides": {
-    "semver": "^7.5.2"
+    "semver": "^7.5.2",
+    "libxmljs2": "^1.0.0"
   },
   "importSort": {
     ".js": {
