--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
     "stylelint-prettier": "^5.0.0",
     "ts-jest": "^29.0.7",
     "ts-loader": "^9.5.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.8.3"
+    "ts-node": "^10.4.0"
   },
   "overrides": {
     "semver": "^7.5.2",
