--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "stylelint-prettier": "^5.0.0",
     "ts-jest": "^29.0.7",
     "ts-loader": "^9.5.0",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "typescript": "5.5.4"
   },
   "overrides": {
     "semver": "^7.5.2",
