--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modusoperandi/licit-custom-styles",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "license": "MIT",
   "type": "module",
   "subversion": "1",
@@ -26,16 +26,14 @@
   },
   "peerDependencies": {
     "@modusoperandi/licit-doc-attrs-step": "^1.0.2",
-    "@modusoperandi/licit-ui-commands": "^1.0.3",
-    "uuid": "^9.0.0"
+    "@modusoperandi/licit-ui-commands": "^1.0.11",
+    "uuid": "^9.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "classnames": "^2.3.1",
-    "color": "^4.2.3",
-    "katex": "^0.16.10",
-    "node-mathquill": "^0.10.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "color": "^5.0.0"
   },
   "devDependencies": {
     "@cyclonedx/cyclonedx-npm": "^2.0.0",
@@ -43,7 +41,6 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/jest": "^29.1.2",
-    "@types/node": "^22.1.0",
     "copyfiles": "^2.4.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^10.0.1",
@@ -68,7 +65,6 @@
     "typescript": "5.5.4"
   },
   "overrides": {
-    "semver": "^7.5.2",
     "libxmljs2": "^1.0.0"
   },
   "importSort": {
