--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modusoperandi/licit-custom-styles",
-  "version": "1.0.17",
+  "version": "1.0.18-rc1",
   "license": "MIT",
   "type": "module",
   "subversion": "1",
