add tests fix formatting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     // Ensure that .d.ts files are created by tsc, but not .js files
     "declaration": true,
     // Ensure that Babel can safely transpile files in the TypeScript project
-    //"isolatedModules": true
+    "isolatedModules": true
   },
   "typeAcquisition": {
     "enable": true
