--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "ci:bom": "cyclonedx-npm --ignore-npm-errors --short-PURLs --output-format XML --output-file dist/bom.xml"
   },
   "peerDependencies": {
-    "@modusoperandi/licit-doc-attrs-step": "^1.0.2",
-    "@modusoperandi/licit-ui-commands": "^1.0.3",
+    "@modusoperandi/licit-doc-attrs-step": "file:modusoperandi-licit-doc-attrs-step-1.0.2.tgz",
+    "@modusoperandi/licit-ui-commands": "file:modusoperandi-licit-ui-commands-1.0.0.tgz",
     "uuid": "^9.0.0"
   },
   "dependencies": {
@@ -38,13 +38,13 @@
   },
   "devDependencies": {
     "@cyclonedx/cyclonedx-npm": "^1.16.1",
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/jest": "^29.1.2",
-    "@types/node": "^20.12.7",
+    "@types/node": "^22.1.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.0.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.2.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -54,7 +54,7 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
-    "jest-prosemirror": "^2.0.0",
+    "jest-prosemirror": "^3.0.0",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.4",
@@ -63,7 +63,8 @@
     "stylelint-prettier": "^5.0.0",
     "ts-jest": "^29.0.7",
     "ts-loader": "^9.5.0",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "typescript": "5.5.4"
   },
   "overrides": {
     "semver": "^7.5.2",
