--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modusoperandi/licit-custom-styles",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "license": "MIT",
   "type": "module",
   "subversion": "1",
@@ -62,7 +62,7 @@
     "ts-jest": "^29.0.7",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.4.0",
-    "typescript": "5.5.4"
+    "typescript": "^5.5.4"
   },
   "overrides": {
     "libxmljs2": "^1.0.0"
