--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -45,7 +45,7 @@ jobs:
           TAG=v$(npm pkg get version --workspaces=false | tr -d \")
           git checkout -b "Release/${TAG}"
           git commit -a -m "Bump version to ${TAG}"
-          git push origin
+          git push -u origin "Release/${TAG}"
           gh pr create -B main --title '${TAG} Release' --fill
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
