--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -46,6 +46,6 @@ jobs:
           git checkout -b "Release/${TAG}"
           git commit -a -m "Bump version to ${TAG}"
           git push -u origin "Release/${TAG}"
-          gh pr create -B main --title '${TAG} Release' --fill
+          gh pr create -B main --title "${TAG} Release" --fill
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
