--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ name: build
 on:
   workflow_dispatch:
   pull_request:
-    branches: [develop]
+    branches: [develop, main, master]
 
 jobs:
   build:
