add timeout fix dep-check

--- a/.github/workflows/dependabot-review.yml
+++ b/.github/workflows/dependabot-review.yml
@@ -10,6 +10,7 @@ permissions:
 jobs:
   review-dependabot-pr:
     runs-on: self-hosted
+    timeout-minutes: 60 # Default 5 days for self hosted
     if: ${{ github.event.pull_request.user.login == 'dependabot[bot]' }}
     steps:
       - name: Dependabot metadata
