--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
       matrix:
         node-version: [20.x]
 
+    timeout-minutes: 60 # Default 5 days for self hosted
     # Ignore PRs from master. Assumtion is master is always a good branch, so this PR is just a sync.
     if: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master' }}
     steps:
