--- a/.github/workflows/dependencycheck.yml
+++ b/.github/workflows/dependencycheck.yml
@@ -17,6 +17,7 @@ jobs:
       matrix:
         node-version: [20.x]
 
+    timeout-minutes: 60 # Default 5 days for self hosted
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -26,7 +27,7 @@ jobs:
 
       # Dependency-Check
       - name: Dependency-Check
-        run: npx owasp-dependency-check --scan . --failOnCVSS 1 --suppression suppression.xml --nvdApiKey ${{ secrets.NVD_KEY }} --disableYarnAudit #--exclude node_modules/node-gyp/**/* --exclude dependency-check-bin/**/* 
+        run: npx owasp-dependency-check --scan . --failOnCVSS 1 --suppression suppression.xml --nvdApiKey ${{ secrets.NVD_KEY }} --disableYarnAudit --exclude node_modules/node-gyp/**/* --exclude dependency-check-bin/**/* 
       - name: Upload Report
         uses: actions/upload-artifact@v4
         if: ${{ failure() }}
