--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@
 name: build
 
 on:
+  
   workflow_dispatch:
   pull_request:
     branches: [develop, main, master]
@@ -18,7 +19,7 @@ jobs:
 
     timeout-minutes: 60 # Default 5 days for self hosted
     # Ignore PRs from master. Assumtion is master is always a good branch, so this PR is just a sync.
-    if: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master' }}
+    if: github.ref_name != 'main' && github.ref_name != 'master'
     steps:
       - uses: actions/checkout@v4
         with:
