--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -41,12 +41,12 @@ jobs:
           npx npm-check-updates --peer --target semver -u
           npm update
           npm i
-      - name: Prepare Release
+      - name: Prepare Release Branch
         run: |
           TAG=v$(npm pkg get version --workspaces=false | tr -d \")
           git checkout -b "Release/${TAG}"
           git commit -a -m "Bump version to ${TAG}"
           git push -u origin "Release/${TAG}"
-          gh pr create -B main --title "${TAG} Release" --fill
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        # PR must be done manually. PR with GITHUB_TOKEN won't trigger workflows.
