--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   publish:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest # GitHub hosted runner required for provenance
     permissions:
       contents: write # write for release
       id-token: write # required for provenance cert #https://docs.npmjs.com/generating-provenance-statements
@@ -17,7 +17,7 @@ jobs:
       matrix:
         node-version: [20.x]
 
-    timeout-minutes: 60 # Default 5 days for self hosted
+    timeout-minutes: 30 # Default 5 days for self hosted
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -34,14 +34,16 @@ jobs:
       - name: NPM Publish
         env: 
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish ./dist --access public # --provenance # provenance requires a github hosted runner
+        run: npm publish ./dist --access public --provenance # provenance requires a github hosted runner
         continue-on-error: true
 
       - name: Set Version number
         run: echo "TAG=$(npm pkg get version --workspaces=false | tr -d \")" >> "$GITHUB_ENV"
 
       - name: Release
+        # https://github.com/softprops/action-gh-release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ env.TAG }}
+          target_commitish: main
           generate_release_notes: true
